Fix render system call errors