@@ -1,12 +1,11 @@
 package com.verdantartifice.primalmagick.client.gui.grimoire;
 
-import com.mojang.blaze3d.platform.GlStateManager;
-import com.mojang.blaze3d.systems.RenderSystem;
 import com.verdantartifice.primalmagick.client.gui.GrimoireScreen;
 import com.verdantartifice.primalmagick.client.gui.widgets.grimoire.IngredientWidget;
 import com.verdantartifice.primalmagick.client.gui.widgets.grimoire.ItemStackWidget;
 import com.verdantartifice.primalmagick.client.gui.widgets.grimoire.RecipeTypeWidget;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.renderer.RenderPipelines;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
@@ -43,7 +42,7 @@ public class SmeltingRecipePage extends AbstractRecipePage {
         int overlayWidth = 51;
 
         // Render ingredient stacks
-        screen.addWidgetToScreen(new IngredientWidget(this.recipe.value().getIngredients().get(0), x - 5 + (side * 140) + (indent / 2) - (overlayWidth / 2) + 32, y + 67 + 14, screen));
+        screen.addWidgetToScreen(new IngredientWidget(this.recipe.value().placementInfo().ingredients().getFirst(), x - 5 + (side * 140) + (indent / 2) - (overlayWidth / 2) + 32, y + 67 + 14, screen));
 
         // Render output stack
         ItemStack output = this.recipe.value().getResultItem(this.registryAccess);
@@ -64,11 +63,9 @@ public class SmeltingRecipePage extends AbstractRecipePage {
         
         // Render overlay background
         guiGraphics.pose().pushMatrix();
-        RenderSystem.enableBlend();
-        RenderSystem.blendFunc(GlStateManager.SourceFactor.SRC_ALPHA, GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA);
         guiGraphics.pose().translate(x - 6 + (side * 140) + (indent / 2), y + 49 + (overlayHeight / 2));
         guiGraphics.pose().scale(2.0F, 2.0F);
-        guiGraphics.blit(OVERLAY, -(overlayWidth / 2), -(overlayHeight / 2), 51, 0, overlayWidth, overlayHeight);
+        guiGraphics.blit(RenderPipelines.GUI_TEXTURED, OVERLAY, -(overlayWidth / 2), -(overlayHeight / 2), 51, 0, overlayWidth, overlayHeight, 256, 256);
         guiGraphics.pose().popMatrix();
     }
 }
